--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,12 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
+
+    compile 'org.springdoc:springdoc-openapi-ui:1.3.7'
+//    compile 'org.springdoc:springdoc-openapi-kotlin:1.3.7'
+//    compile 'org.springdoc:springdoc-openapi-core:1.1.49'
+
+
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
