--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 spring:
   profiles:
     active: prod
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: create-drop
 
 #springdoc:
 #  swagger-ui:
