--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
-
+    compile 'com.vladmihalcea:hibernate-types-52:2.9.13'
     compile 'org.springdoc:springdoc-openapi-ui:1.3.7'
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
